# pyDIMM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pyDIMM/: __init__.py  _dirichlet_multinomial_mixture.py  class_DIMM.py
pyDIMM/clibs/: makefile  pyDIMM_libs.c
