[build-system]
requires = [
    "setuptools>=50.0",
    "numpy>=1.22.3",
    "scipy>=1.3.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyDIMM"
version = "0.1.0"
authors = [
  { name="Ziqi Rong", email="ziqirong01@gmail.com" },
]
description = "A Python Dirichlet Multinomial Mixture Model"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jck-R/pyDIMM"
"Bug Tracker" = "https://github.com/Jck-R/pyDIMM/issues"