[build-system]
requires = [
    "setuptools>=50.0",
    "numpy>=1.22.3",
    "scipy>=1.3.2",
    "scikit-learn>=1.1.3",
    "torch>=1.13.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyDIMM"
version = "0.2.0"
authors = [
  { name="Ziqi Rong", email="ziqirong@umich.edu" },
]
description = "A Python Dirichlet-multinomial Mixture Model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jck-R/pyDIMM"
"Bug Tracker" = "https://github.com/Jck-R/pyDIMM/issues"